--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="container" id="container">
-            <button class = "button" type="submit">Tell Me A Joke</button>
+            <button class = "button" type="submit" id="button">Tell Me A Joke</button>
             <audio src="" ></audio>
     </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
